Games-and-Apps.css
/* ... */
@media (max-width: 991px) {
  .u-section-1 .u-sheet-1 {
    min-height: 406px;
  }

  .u-section-1 .u-text-1 {
    font-size: 2.25rem;
  }

  .u-section-1 .u-text-2 {
    width: auto;
    margin-left: 0;
    margin-right: 0;
  }

  .u-section-1 .u-layout-wrap-1 {
    width: 720px;
    margin-right: 0;
    margin-left: 50px;
  }

  .u-section-1 .u-layout-cell-1 {
    min-height: 178px;
  }

  .u-section-1 .u-group-1 {
    min-height: 251px;
    margin-right: initial;
    margin-left: initial;
    width: auto;
  }

  .u-section-1 .u-image-1 {
    width: 130px;
    height: 106px;
    margin-left: 0;
  }

  .u-section-1 .u-group-2 {
    width: 130px;
    min-height: 144px;
    margin-left: 0;
  }

  .u-section-1 .u-text-3 {
    font-size: 1.125rem;
  }

  .u-section-1 .u-text-4 {
    font-size: 0.625rem;
    margin-left: -2px;
    margin-right: -2px;
  }

  .u-section-1 .u-btn-1 {
    font-size: 0.625rem;
    padding: 9px 16px 10px 15px;
  }

  .u-section-1 .u-layout-cell-2 {
    min-height: 178px;
  }

  .u-section-1 .u-group-3 {
    min-height: 270px;
    width: 130px;
  }

  .u-section-1 .u-image-2 {
    width: 130px;
    height: 106px;
    margin-left: auto;
  }

  .u-section-1 .u-group-4 {
    min-height: 144px;
    margin-right: initial;
    margin-left: initial;
    width: auto;
  }

  .u-section-1 .u-text-5 {
    font-size: 1.125rem;
    margin-left: 0;
    margin-right: 0;
  }

  .u-section-1 .u-text-6 {
    font-size: 0.625rem;
    margin-left: -2px;
    margin-right: -2px;
  }

  .u-section-1 .u-btn-2 {
    font-size: 0.625rem;
    padding: 9px 16px 10px 15px;
  }

  .u-section-1 .u-layout-cell-3 {
    min-height: 178px;
  }

  .u-section-1 .u-group-5 {
    min-height: 270px;
    width: 133px;
    margin-left: 0;
    margin-right: 0;
  }

  .u-section-1 .u-image-3 {
    width: 130px;
    height: 106px;
    margin-left: auto;
  }

  .u-section-1 .u-group-6 {
    min-height: 144px;
    width: 130px;
    margin-left: 0;
    margin-right: 0;
  }

  .u-section-1 .u-container-layout-9 {
    padding-top: 0;
  }

  .u-section-1 .u-text-7 {
    font-size: 1.125rem;
    width: auto;
    margin-top: 0;
    margin-left: 0;
    margin-right: 0;
  }

  .u-section-1 .u-text-8 {
    font-size: 0.625rem;
    margin-top: 13px;
    margin-left: 0;
    margin-right: 0;
  }

  .u-section-1 .u-btn-3 {
    font-size: 0.625rem;
    margin-top: 17px;
    padding: 9px 16px 10px;
  }

  .u-section-1 .u-layout-cell-4 {
    min-height: 178px;
  }

  .u-section-1 .u-group-7 {
    min-height: 254px;
    width: 130px;
    margin-left: 0;
  }

  .u-section-1 .u-image-4 {
    width: 130px;
    height: 106px;
    margin-top: 3px;
  }

  .u-section-1 .u-group-8 {
    min-height: 144px;
    width: 130px;
    margin-left: 0;
    margin-right: 0;
  }

  .u-section-1 .u-container-layout-12 {
    padding-left: 0;
    padding-right: 0;
  }

  .u-section-1 .u-text-9 {
    font-size: 1.125rem;
    margin-left: 0;
    margin-right: 0;
  }

  .u-section-1 .u-text-10 {
    font-size: 0.625rem;
    width: auto;
    margin-top: 10px;
    margin-left: 0;
    margin-right: 0;
  }

  .u-section-1 .u-btn-4 {
    font-size: 0.625rem;
    padding: 9px 17px 10px 15px;
  }
}

@media (max-width: 767px) {
  .u-section-1 .u-sheet-1 {
    min-height: 1558px;
  }

  .u-section-1 .u-text-1 {
    font-size: 3rem;
  }

  .u-section-1 .u-layout-wrap-1 {
    width: 350px;
    margin-left: auto;
    margin-right: auto;
  }

  .u-section-1 .u-layout-cell-1 {
    min-height: 249px;
  }

  .u-section-1 .u-image-1 {
    height: 162px;
    width: 235px;
    margin-left: auto;
  }

  .u-section-1 .u-group-2 {
    min-height: 160px;
    width: 235px;
    margin-left: auto;
  }

  .u-section-1 .u-text-3 {
    font-size: 1.5rem;
    margin-left: 16px;
    margin-right: 16px;
  }

  .u-section-1 .u-text-4 {
    font-size: 1rem;
  }

  .u-section-1 .u-btn-1 {
    font-size: 0.875rem;
    padding: 12px 18px;
  }

  .u-section-1 .u-layout-cell-2 {
    min-height: 220px;
  }

  .u-section-1 .u-group-3 {
    min-height: 324px;
    width: 235px;
  }

  .u-section-1 .u-image-2 {
    height: 162px;
    width: 235px;
  }

  .u-section-1 .u-group-4 {
    min-height: 160px;
    width: auto;
    margin-right: initial;
    margin-left: initial;
  }

  .u-section-1 .u-text-5 {
    font-size: 1.5rem;
    margin-left: 16px;
    margin-right: 16px;
  }

  .u-section-1 .u-text-6 {
    font-size: 1rem;
  }

  .u-section-1 .u-btn-2 {
    font-size: 0.875rem;
    padding: 12px 18px;
  }

  .u-section-1 .u-layout-cell-3 {
    min-height: 319px;
  }

  .u-section-1 .u-group-5 {
    min-height: 324px;
    width: 235px;
    margin-left: auto;
    margin-right: auto;
  }

  .u-section-1 .u-image-3 {
    height: 162px;
    width: 235px;
  }

  .u-section-1 .u-group-6 {
    min-height: 160px;
    width: 235px;
    margin-left: auto;
    margin-right: auto;
  }

  .u-section-1 .u-text-7 {
    font-size: 1.5rem;
    margin-left: 16px;
    margin-right: 16px;
  }

  .u-section-1 .u-text-8 {
    font-size: 1rem;
  }

  .u-section-1 .u-btn-3 {
    font-size: 0.875rem;
    padding: 12px 18px;
  }

  .u-section-1 .u-layout-cell-4 {
    min-height: 156px;
  }

  .u-section-1 .u-group-7 {
    min-height: 324px;
    width: 235px;
    margin-left: auto;
  }

  .u-section-1 .u-image-4 {
    height: 162px;
    width: 235px;
    margin-top: 1px;
    margin-left: auto;
  }

  .u-section-1 .u-group-8 {
    min-height: 160px;
    width: 235px;
    margin-left: auto;
    margin-right: auto;
  }

  .u-section-1 .u-container-layout-12 {
    padding-top: 0;
    padding-bottom: 0;
  }

  .u-section-1 .u-text-9 {
    font-size: 1.5rem;
    margin-left: 16px;
    margin-right: 16px;
  }

  .u-section-1 .u-text-10 {
    font-size: 1rem;
    width: 149px;
    margin-left: auto;
    margin-right: auto;
  }

  .u-section-1 .u-btn-4 {
    font-size: 0.875rem;
    padding: 12px 18px;
  }
}
/* ... */

